@@ -4,6 +4,12 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.1.4) experimental; urgency=low
+
+  * osfunc: more logging around gettemppath
+
+-- Detlef Oertel <d.oertel@uib.de>  Mon, 03 Jun 2019:15:00:00 +0200
+
 opsi-winst/opsi-script (4.12.1.3) experimental; urgency=low
 
   * shellInAnIcon: on loglevel 9: reread teporary files and do not delete
